--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,9 @@
             "email": "yandod@gmail.com"
         }
     ],
+    "require": {
+        "ulrichsg/getopt-php": "2.3"
+    },
     "require-dev": {
         "phpunit/phpunit": "~4"
     },
