--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         }
     ],
     "require": {
-        "ulrichsg/getopt-php": "2.3"
+      "php": ">=5.4.0",
+      "ulrichsg/getopt-php": "2.3"
     },
     "require-dev": {
         "phpunit/phpunit": "~4"
