--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ php:
   - 5.4
   - 5.5
   - 5.6
-
+  - hhvm
+  - nightly
 install:
   - 'composer install'
-  - 'cat ./vendor/composer/autoload_namespaces.php'
 before_script:
   - 'mkdir -p ./phpwarrior/test-beginner/'
   - 'curl https://gist.githubusercontent.com/yandod/31166f8ee21f22105e92/raw/86e5a37c4e832c8af2b6cc93c51963331898b9fe/player.php > phpwarrior/test-beginner/player.php'
