--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,5 +10,28 @@ jobs:
       - uses: actions/checkout@v2
       - name: Setup
         run: make setup
+      - name: Setup test
+        run: make test-setup
       - name: Run test game
         run: make test
+  ja_JP:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup
+        run: make setup
+      - name: Setup test
+        run: make test-setup
+      - name: Run test game
+        run: make test-ja
+  ru_RO:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup
+        run: make setup
+      - name: Setup test
+        run: make test-setup
+      - name: Run test game
+        run: make test-ru
+  
